feat: add drizzle user persistence and create user route
